--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 
 section {
@@ -83,7 +84,6 @@ footer p {
   font-size: 16px;
   opacity: 0.7;
   line-height: 1.5;
-  margin: 20px;
 }
 footer ul {
   padding: 0;
