--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@ body {
   max-width: 1400px;
   margin: 0 auto;
 }
+.text-center {
+  text-align: center;
+}
 .grid {
   display: grid;
 
@@ -15,18 +18,66 @@ body {
 
 .img-responsive {
   max-width: 100%;
+  display: block;
 }
 .grid-2-colums {
   grid-template-columns: 1fr 1fr;
 }
-
 .grid-3-colums {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.grid-3-colums-first {
   grid-template-columns: 1fr 2fr 2fr;
 }
+
+.card {
+  background-color: white;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 32px;
+}
+.card-footer {
+  padding: 20px;
+}
+.btn {
+  display: block;
+  color: white;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  letter-spacing: 3px;
+  background-color: #462cb3;
+  text-transform: uppercase;
+  padding: 16px;
+}
+.more-activities {
+  display: block;
+  color: white;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  letter-spacing: 3px;
+  background-color: #462cb3;
+  text-transform: uppercase;
+  padding: 16px;
+}
+
 section {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px;
+}
+section.secondary {
+  background-color: #f8f8f8;
 }
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
@@ -57,6 +108,21 @@ header h3 {
   line-height: 1.5;
   letter-spacing: 5px;
   margin: 0;
+}
+main h4 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1;
+  color: #272044;
+  margin: 0;
+}
+main h5 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 1;
+  margin: 0;
+  color: #272044;
 }
 header a {
   font-weight: 700;
