--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .img-responsive {
-  max-width: 100%;
+  width: 100%;
   display: block;
 }
 .grid-2-colums {
@@ -30,12 +30,18 @@ body {
 .grid-3-colums-first {
   grid-template-columns: 1fr 2fr 2fr;
 }
-
+.embed {
+  width: 100%;
+  aspect-ratio: 1/1;
+}
 .card {
   background-color: white;
   margin: 30px 0;
 }
 
+.card-header.grid {
+  grid-gap: 0;
+}
 .card-body {
   padding: 32px;
 }
@@ -227,5 +233,11 @@ footer a {
   }
   section {
     padding: 30px;
+  }
+  .card-header img {
+    display: none;
+  }
+  .embed {
+    aspect-ratio: 16/9;
   }
 }
