--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,9 @@ body {
   width: 100%;
   aspect-ratio: 1/1;
 }
+.instagram-embeds {
+  margin: 30px 0;
+}
 .card {
   background-color: white;
   margin: 30px 0;
@@ -239,5 +242,10 @@ footer a {
   }
   .embed {
     aspect-ratio: 16/9;
+  }
+  blockquote {
+    margin: 0 auto;
+    display: block;
+    width: 100%;
   }
 }
